implementacion de fase 2 y correccion de estructura front aunque falta otra vuelta
